<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/vermelhoBack">
    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="641dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/branco"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/frase3"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lNome"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/editNomeCompleto"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:autofillHints="name"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNome"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblCpf"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/editCPF"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintCpf"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:importantForAutofill="no" />
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblEmail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintEmail"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblTelefone"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="phone"
            android:autofillHints="phone"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintTelefone"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            />
            <TextView
        android:fontFamily="@font/roboto"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/lblNovaRua"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/editRua"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:autofillHints="name"
        android:fontFamily="@font/roboto"
        android:hint="@string/hintNovaRua"
        android:textColorHint="@color/cinza"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:fontFamily="@font/roboto"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/lblNovaBairro"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/editBairro"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:fontFamily="@font/roboto"
        android:hint="@string/hintNovaBairro"
        android:textColorHint="@color/cinza"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:fontFamily="@font/roboto"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/lblNovaNumero"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/editNumero"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:fontFamily="@font/roboto"
        android:hint="@string/hintNovaNumero"
        android:textColorHint="@color/cinza"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:fontFamily="@font/roboto"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/lblNovaCep"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/editCep"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:inputType="phone"
        android:autofillHints="phone"
        android:fontFamily="@font/roboto"
        android:hint="@string/hintNovaCep"
        android:textColorHint="@color/cinza"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:fontFamily="@font/roboto"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/lblNovaCidade"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editCidade"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:autofillHints="password"
        android:fontFamily="@font/roboto"
        android:hint="@string/hintNovaCidade"
        android:textColorHint="@color/cinza"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <TextView
        android:fontFamily="@font/roboto"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/lblNovaEstado"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
        <Spinner
            android:id="@+id/spnEstado"
            android:layout_gravity="start"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaComplemento"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/editComplemento"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaComplemento"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblSenha"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="2dp"
            android:autofillHints="password"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintSenha"
            android:textColorHint="@color/cinza"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblConfirmaSenhaString"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/editConfirmarSenha"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintConfirmaSenhaString"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            />
        <Button
            android:fontFamily="@font/roboto"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btnFinalizarCadastro"
            android:textColor="@color/white"
            android:backgroundTint="@color/vermelhoBack"
            android:text="@string/btnFinalizarString"/>
        <Button
            android:fontFamily="@font/roboto"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btnCancelar"
            android:textColor="@color/vermelhoBack"
            android:backgroundTint="@color/branco"
            android:text="@string/btnCancelarString"
            android:layout_marginBottom="10dp"
            />






            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>