<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:background="@color/branco"

                android:src="@drawable/ic_flecha_voltar"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dados_do_pedido"
                android:fontFamily="@font/roboto_negrito"
                android:textSize="26sp"
                android:textColor="@color/black"
                android:layout_marginStart="24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblprodutosstring"
                android:textSize="20sp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:layout_marginStart="24dp"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize,UselessLeaf">

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblvalortotstring"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 15,00"
                android:textSize="30sp"
                android:textColor="@color/vermelhoBack"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="24dp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblentregastring"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_localizacao"
                    tools:ignore="ContentDescription,HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/indicadorEnderecoAtualString"
                    android:textColor="@color/cinzafont"
                    android:textSize="18sp" />





            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblpagamentostring"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="24dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNomecliente"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="24dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/vermelhoBack"
                android:text="@string/encerrar_pedido"
                android:textColor="@color/branco"
                android:fontFamily="@font/roboto_negrito"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>